:memo: Update third maximum number

--- a/_posts/2016-12-28-leetcode-414.md
+++ b/_posts/2016-12-28-leetcode-414.md
@@ -2,7 +2,7 @@
 bg: "think.jpg"
 layout: post
 title:  "Third Maximum Number"
-crawlertitle: "leetcode array"
+crawlertitle: "leetcode third maximum number"
 summary: "Find the third maximum number in an array"
 categories: posts
 tags: ['leetcode']
@@ -12,14 +12,16 @@ author: Liu-Cheng Xu
 
 Given a **non-empty** array of integers, return the third maximum number in this array. If it does not exist, return the maximum number. The time complexity must be in O(n).
 
-[A short easy cpp solution using set](https://discuss.leetcode.com/topic/63903/short-easy-c-using-set):
+The following solutions are all stealed from [A short easy cpp solution using set](https://discuss.leetcode.com/topic/63903/short-easy-c-using-set):
+
+cpp version:
 
 {% highlight cpp %}
 class Solution {
     public:
     int thirdMax(vector<int>& nums) {
         set<int> top3;
-        for (int num : nums) {
+        for (auto num : nums) {
             top3.insert(num);
             if (top3.size() > 3)
                 top3.erase(top3.begin());
@@ -41,12 +43,18 @@ public class Solution {
                 set.remove(set.first());
             }
         }
-        return set.size() < 3 ? set.last() : set.first();
+        return set.size() == 3 ? set.first() : set.last();
     }
 }
 {% endhighlight %}
 
-the same idea using python:
+We can see the cpp and java version above is very similar. A person in the discussion presented a question that std::set usually uses red-black tree, so wouldn't the solution be *nlogn*? 
+
+The answer to the presented problem is since we only have 3 elements, insert/delete is a constant time operation. Don't stick to O(*nlogn*) concept. What's more, if dive into the problem, we can find the following content about insert operation complexity from [cplusplus.com](http://www.cplusplus.com/reference/set/set/insert/):
+
+>If a single element is inserted, logarithmic in size in general, but amortized constant if a hint is given and the position given is the optimal.
+
+Let's see the same idea using python:
 
 {% highlight python %}
 class Solution(object):
@@ -59,3 +67,14 @@ class Solution(object):
         return -l[2] if len(l)>2 else -l[0]
 {% endhighlight %}
 
+I am not an expert in python , yet, so the python solution is not so clear and understandable at my first glance. Actually, the reason is that I didn't know `bisect.insort()`.
+
+The idea could also be used to get topk items in a large array, whereas you need pay more attenation to a certain case: 
+>Input: [2, 2, 3, 1]
+>
+>Output: 1
+>
+>Explanation: Note that the third maximum here means the third maximum distinct number.
+>Both numbers with value 2 are both considered as second maximum.
+
+If numbers with the same value can not be considered as the same one, the result is unexpected. I did make a mistake here in the past. In Baysesian Personalized Ranking algorithm, I need to obtain the topk items from a list. At that time I used the similar solution, though the final result seemingly looked normal, it was indeed wrong.
