--- a/_posts/2016-12-28-leetcode-414.md
+++ b/_posts/2016-12-28-leetcode-414.md
@@ -69,7 +69,7 @@ class Solution(object):
 
 I am not an expert in python , yet, so the python solution is not so clear and understandable at my first glance. Actually, the reason is that I didn't know `bisect.insort()`.
 
-The idea could also be used to get topk items in a large array, whereas you need pay more attenation to a certain case: 
+The idea could also be used to get the top k items in a large array, whereas you need pay more attention to a certain case: 
 
 >Input: [2, 2, 3, 1]
 >
@@ -78,4 +78,4 @@ The idea could also be used to get topk items in a large array, whereas you need
 >Explanation: Note that the third maximum here means the third maximum distinct number.
 >Both numbers with value 2 are both considered as second maximum.
 
-If numbers with the same value can not be considered as the same one, the result is unexpected. I did make a mistake here in the past. In Baysesian Personalized Ranking algorithm, I need to obtain the topk items from a list. At that time I used the similar solution, though the final result seemingly looked normal, it was indeed wrong.
+If numbers with the same value can not be considered as the same one, the result is unexpected. I did make a mistake here in the past. In Bayesian Personalized Ranking algorithm, I need to obtain the top k items from a list. At that time I used the similar solution, though the final result seemingly looked normal, it was indeed wrong.
