--- a/_posts/2017-01-25-space-vim.md
+++ b/_posts/2017-01-25-space-vim.md
@@ -66,4 +66,6 @@ function! UserConfig()
 endfunction
 ```
 
+I shamelessly steal many elements from [plug.vim](https://github.com/junegunn/vim-plug/blob/master/plug.vim) in [core_config.vim](https://github.com/liuchengxu/space-vim/blob/master/core/autoload/core_config.vim), for vim-plug is truely inviting because of its simplicity and clear design. I wish space-vim could be concise as well.
+
 For more details, please see [space-vim](https://github.com/liuchengxu/space-vim). Hope you like it too.
