--- a/_posts/2017-01-25-space-vim.md
+++ b/_posts/2017-01-25-space-vim.md
@@ -8,17 +8,17 @@ tags: ['tools']
 author: Liu-Cheng Xu
 ---
 
-It's obvious that I am both a vimmer and spacemacs user (not a spacemacs hacker, yet). I was really amazed by spacemacs' beautiful GUI and mnemonic keybindings when using it at the first time. Now, I oftern use spacemacs in GUI environment. However, I still prefer vim in terminal, for it's much faster than emacs, especially when opening some small files.
+Obviously I am both a vimmer and spacemacs user (not a spacemacs hacker, yet). I was really amazed by spacemacs' beautiful GUI and mnemonic keybindings when using it at the first time. Now, I oftern use spacemacs in GUI environment. However, I still prefer vim in terminal, for it's much faster than emacs, especially when opening some small files.
 
 Vim is definitely my first choice in terminal, but spacemacs' beautiful appearance is utterly appealing and its efficient keybindings indeed contribute to help me remember much more key mappings in vim. Hence I write a vim colorscheme [space-vim-dark](https://github.com/liuchengxu/space-vim-dark) based on [spacemacs-theme](https://github.com/nashamri/spacemacs-theme). What's more, I reconfigure my vim configuration based on spacemacs' priciples, which is [space-vim](https://github.com/liuchengxu/space-vim).
 
-![](https://github.com/liuchengxu/space-vim-dark/blob/screenshots/screenshot3.png?raw=true)
+![screenshot](https://raw.githubusercontent.com/liuchengxu/img/master/space-vim/space-vim-gui.png)
 
 Features:
 
 - Beautiful interface.
 
-    ![](https://github.com/liuchengxu/space-vim-dark/blob/screenshots/screenshot1.png?raw=true)
+    ![screenshot](https://raw.githubusercontent.com/liuchengxu/img/master/space-vim/space-vim-cterm.png)
 
 - Mnenomic keybindings.
     commands have mnemonic prefixes like `SPC b` for all the buffer commands.
@@ -66,6 +66,6 @@ function! UserConfig()
 endfunction
 ```
 
-I shamelessly steal many elements from [plug.vim](https://github.com/junegunn/vim-plug/blob/master/plug.vim) in [core_config.vim](https://github.com/liuchengxu/space-vim/blob/master/core/autoload/core_config.vim), for vim-plug is truely inviting because of its simplicity and clear design. I wish space-vim could be concise as well.
+I shamelessly steal many elements from [plug.vim](https://github.com/junegunn/vim-plug/blob/master/plug.vim) in [spacevim.vim](https://github.com/liuchengxu/space-vim/blob/master/core/autoload/spacevim.vim), for vim-plug is truely inviting because of its simplicity and clear design. I wish space-vim could be concise as well.
 
 For more details, please see [space-vim](https://github.com/liuchengxu/space-vim). Hope you like it too.
