--- a/_posts/2019-04-22-vista.vim.md
+++ b/_posts/2019-04-22-vista.vim.md
@@ -38,7 +38,7 @@ In the gif above I use the latest [floating window](https://github.com/neovim/ne
 
 1. Upgrade your neovim if it doesn't have the floating window api, `:h api-floatwin`.
 
-2. Then configure fzf to open in floating window, refer to [https://github.com/junegunn/fzf.vim/issues/664](https://github.com/junegunn/fzf.vim/issues/664) for more details.
+2. Then configure fzf to open in a floating window, refer to [https://github.com/junegunn/fzf.vim/issues/664](https://github.com/junegunn/fzf.vim/issues/664) as well.
 
     ```vim
         let $FZF_DEFAULT_OPTS = '--layout=reverse'
@@ -73,4 +73,4 @@ In the gif above I use the latest [floating window](https://github.com/neovim/ne
         endfunction
     ```
 
-For details useage, please see [the README on github](https://github.com/liuchengxu/vista.vim) and `:h vista`. Let me know if you run into any issues via the [issue tracker](https://github.com/liuchengxu/vista.vim/issues/new?template=bug_report.md).
+For detailed usage, please see [the README on github](https://github.com/liuchengxu/vista.vim) and `:h vista`. Let me know if you run into any issues via the [issue tracker](https://github.com/liuchengxu/vista.vim/issues/new?template=bug_report.md).
